--- a/css/style.css
+++ b/css/style.css
@@ -683,7 +683,7 @@ header .logo img {
 .constructor .panel-four p::after {
   position: absolute;
   content: "метров";
-  margin-left: 6rem;
+  margin-left: 1rem;
   margin-top: 4.5rem;
   font-family: 'MuseoSansCyrl_med', sans-serif;
   color: #000;
@@ -712,7 +712,7 @@ header .logo img {
 
 #calc-result {
   display: block;
-  width: 32rem;
+  width: 28rem;
   height: 5.3rem;
   margin: 1.5rem auto;
   border: 1px solid #dedede;
@@ -860,7 +860,8 @@ header .logo img {
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center
+  align-items: center;
+
 }
 
 .director {
@@ -1035,6 +1036,7 @@ header .logo img {
 
 /* my code */
 
+/* AccordionTwo */
 .collapseOne {
   display: block;
 }
@@ -1047,8 +1049,28 @@ header .logo img {
   display: none;
 }
 
+/* calculator */
 .sumpTwo {
-  display: block;
+  display: none;
+}
+
+/* statusmessage */
+.statusmessage {
+  padding: 2px;
+  font-size: 1.7rem;
+  color: #90c406;
+  position: absolute;
+  top: 0;
+}
+
+.statusdiv {
+  display: flex;
+  position: relative;
+  max-width: 250px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  top: -8px;
 }
 
 /* end */
@@ -1109,6 +1131,10 @@ header .logo img {
 }
 
 @media (max-width:991px) {
+  .director span {
+    font-size: 2.2rem;
+  }
+
   header .logo span {
     letter-spacing: 0;
     font-size: 1.1rem
@@ -1201,6 +1227,14 @@ header .logo img {
 }
 
 @media (max-width:767px) {
+  .constructor .panel-four p::after {
+    display: none;
+  }
+
+  .director h2 {
+    font-size: 2rem;
+  }
+
   header .logo {
     width: 20rem;
     margin-left: auto;
@@ -1435,6 +1469,25 @@ header .logo img {
     padding: 0
   }
 }
+
+@media (max-width:720px) {
+  .director span {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width:576px) {
+  .director span {
+    font-size: 1.8rem;
+  }
+
+
+
+  .flex-center {
+    flex-direction: column;
+  }
+}
+
 
 @media (max-width:320px) {
   main h1 {
